--- a/MatchGame/MatchGame.csproj
+++ b/MatchGame/MatchGame.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>animal.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="animal.ico" />
+  </ItemGroup>
 
 </Project>
